--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,55 +1,37 @@
 version: "3.9"
 services:
-  web1: # application web service
-    tty: true
-    build: .
+  web: # application web service
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: registryexplain.azurecr.io/webexplain
+    container_name: webexplain
     ports:
-      - "5000:80"
-    volumes:
-      - ./:/explain/Explanable
-    networks:
-      - postgres_network
+      - "80:80"
+    command: ['python', 'app.py']
     depends_on:
       - database
-
-  web2: # application web service
-    tty: true
-    build: .
-    ports:
-      - "8050:8050"
-    volumes:
-      - ./:/explain/Explanable_v2
-    networks:
-      - postgres_network
-    depends_on:
-      - database
+    environment:
+      - DB_USER=citus
+      - DB_PASSWORD=FRAst@201
+      - DB_DATABASE=citus
+      - DB_HOST=c.database.postgres.database.azure.com
 
   database: # database service configuration
     image: postgres:15
-    tty: true
+    container_name: explaindatabase
     ports:
       - "5432:5432"
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=0000
       - POSTGRES_DB=postgres
-    networks:
-      - postgres_network
     volumes:
       - db-data:/var/lib/postgresql/data/
 
-  pgadmin4: # pgadmin interface service configuration
-    image: dpage/pgadmin4
-    environment:
-        PGADMIN_DEFAULT_EMAIL: ftchouanga@gmail.com
-        PGADMIN_DEFAULT_PASSWORD: 0000
-    ports:
-        - "8889:80"
-    networks:
-      - postgres_network
 volumes:
   db-data: # data volumes from database postgresql
-
-networks: # services networking infrastructrure
-  postgres_network:
-    driver: bridge
+    driver: azure_file
+    driver_opts:
+     share_name: myfileshare
+     storage_account_name: mystorageaccountexplain
