--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,10 +28,20 @@ services:
       - POSTGRES_DB=postgres
     volumes:
       - db-data:/var/lib/postgresql/data/
+      - ./init.sql:/docker-entrypoint-initdb.d/create_tables.sql
+  
+  pgadmin:
+    container_name: explain_pgadmin4
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: root
+    ports:
+      - "5050:80"
 
 volumes:
   db-data: # data volumes from database postgresql
     #driver: azure_file
     #driver_opts:
-     #share_name: myfileshare
-     #storage_account_name: mystorageaccountexplain
+    #share_name: myfileshare
+    #storage_account_name: mystorageaccountexplain
