--- a/db_test/docker-compose.yml
+++ b/db_test/docker-compose.yml
@@ -1,18 +1,23 @@
 version: '3.8'
+
 services:
+
   db:
-      image: postgres
-      restart: always
-      environment:
-        POSTGRES_PASSWORD: example
-    healthcheck:
-      test: [“CMD-SHELL”, “pg_isready”]
-        interval    : 1s
-      timeout: 5s
-        retries: 10
- 
-    adminer:
-      image: adminer
-      restart: always
-      ports:
-        - 8080:8080
+    container_name: pg_container
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: root
+      POSTGRES_DB: test_db
+    ports:
+      - "5432:5432"
+  pgadmin:
+    container_name: pgadmin4_container
+    image: dpage/pgadmin4
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: root
+    ports:
+      - "5050:80"
