--- a/kubernetes-explain/postgres-configmap.yaml
+++ b/kubernetes-explain/postgres-configmap.yaml
@@ -1,7 +1,23 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: postgres-config
+  name: init-scripts-postgresql
   namespace: explain
 data:
-  POSTGRES_DB: "postgres"
+  create_tables.sql: |
+    CREATE TABLE IF NOT EXISTS metadata_donnée_v2  (
+        date VARCHAR(255),
+        fichier  VARCHAR(255),
+        contenu text
+    );
+
+    CREATE TABLE IF NOT EXISTS metadata_modèle  (
+        date VARCHAR(255),
+        fichier  VARCHAR(255),
+        model VARCHAR(255),
+        hyperparametre text,
+        contenu text
+    );
+
+
+  
