--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,10 @@ services:
     depends_on:
       - database
     environment:
-      - DB_USER=postgres
-      - DB_PASSWORD=0000
-      - DB_DATABASE=postgres
-      - DB_HOST=database
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=0000
+      - POSTGRES_DB=postgres
+      - POSTGRES_HOST=database
 
   database: # database service configuration
     image: postgres:15
@@ -29,7 +29,9 @@ services:
     volumes:
       - db-data:/var/lib/postgresql/data/
       - ./init.sql:/docker-entrypoint-initdb.d/create_tables.sql
-  
+
+
+
   pgadmin:
     container_name: explain_pgadmin4
     image: dpage/pgadmin4
